--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <div id="content"></div>
 
-    <script src="navigation.js"></script>
+    <script src="js/navigation.js"></script>
 
 
     <!-- /.container -->
